--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -1,40 +1,36 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST" action="">
+<div class="container auth-container">
+    <div class="auth-card section">
+        <h2 class="text-center">Create New Project</h2>
+        <form method="POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">New Project</legend>
-                <div class="form-group">
-                    {{ form.name.label(class="form-control-label") }}
-                    {% if form.name.errors %}
-                        {{ form.name(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.name.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.name(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.script_text.label(class="form-control-label") }}
-                    {% if form.script_text.errors %}
-                        {{ form.script_text(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.script_text.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.script_text(class="form-control form-control-lg", rows=15) }}
-                    {% endif %}
-                </div>
-            </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.name.label }}
+                {{ form.name(class="form-input") }}
+                {% if form.name.errors %}
+                    <ul class="errors">
+                        {% for error in form.name.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.script_file.label }}
+                {{ form.script_file(class="form-input-file") }}
+                {% if form.script_file.errors %}
+                    <ul class="errors">
+                        {% for error in form.script_file.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-primary") }}
             </div>
         </form>
     </div>
+</div>
 {% endblock content %}
