--- a/templates/projects.html
+++ b/templates/projects.html
@@ -17,7 +17,7 @@
                         <div class="project-actions">
                             <a href="{{ url_for('project_detail', project_id=project.id) }}" class="btn btn-secondary">View Details</a>
                             <a href="{{ url_for('script_analysis', project_id=project.id) }}" class="btn btn-secondary">Analyze Script</a>
-                            <a href="{{ url_for('schedule_page', project_id=project.id) }}" class="btn btn-secondary">Schedule</a>
+                            <a href="{{ url_for('schedule', project_id=project.id) }}" class="btn btn-secondary">Schedule</a>
                         </div>
                     </div>
                 {% endfor %}
