--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 <body>
     {% if request.endpoint != 'login' and request.endpoint != 'register' %}
     <div class="header">
-        <h1><a href="{{ url_for('index') }}">CineHack.AI</a></h1>
+        <h1><a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='logo.jpg') }}" alt="CineHack.AI Logo" style="height: 40px; vertical-align: middle;"></a></h1>
         <nav>
             <a href="{{ url_for('script_analysis') }}" class="{{ 'active' if request.endpoint == 'script_analysis' else '' }}">AI Script Analysis</a>
             {% if current_user.is_authenticated %}
